<resources>

    <string name="app_name">Forinsia APP</string>
    <string name="app_id">302232956849354</string>
    <string name="action_settings">Log Out</string>
    <string name="title_activity_credencial">Forinsia App</string>
    <string name="title_activity_tipo">Forinsia APP</string>
    <string name="title_activity_formando">Forinsia App</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="title_activity_formador">Forinsia APP</string>
    <string name="title_activity_inquerito">Forinsia APP</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_adecorrer">Forinsia App</string>
    <string name="title_activity_aterminadas">Forinsia App</string>
    <string name="title_activity_os_meus_documentos">Forinsia App</string>
    <string name="title_activity_consultar_avaliacao">Forinsia App</string>
    <string name="title_activity_agenda">Forinsia App</string>
    <string name="title_activity_os_meus_documentos_terminados">Forinsia App</string>
    <string-array name="sessoes">
        <item>20-02-2017</item>
        <item>23-03-2017</item>
        <item>14-4-2017</item>
    </string-array>
    <string-array name="entidades">
        <item>entidade 1</item>
        <item>entidade 2</item>
        <item>entidade 3</item>
        <item>entidade 4</item>
        <item>entidade 5</item>
        <item>entidade 6</item>
    </string-array>
    <string name="backToMain">Voltar</string>
    <string name="eventTitle">Titulo</string>
    <string name="eventDesc">Descrição</string>
    <string name="eventAttendee">Participante</string>
    <string name="eventStart">Hora de Inicio</string>
    <string name="eventEnd">Hora de Fim</string>
    <string name="eventLocation">Localização</string>
    <string name="createEventTitle">Titulo</string>
    <string name="createEventDesc">Descrição</string>
    <string name="createEventAttendee">Participantes</string>
    <string name="createEventStart">Inicio</string>
    <string name="createEventStartDate">Escolha Data</string>
    <string name="createEventStartTime">Escolha Hora</string>
    <string name="createEventEnd">Fim</string>
    <string name="createEventEndDate">Escolha Data</string>
    <string name="createEventEndTime">Escolha Hora</string>
    <string name="createEventLocation">Localização</string>

</resources>
